# scalerack

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: .gitignore  Gemfile  _config.yml  index.md
scripts/: generate_docs.py  generate_previews.py
src/scalerack/: __init__.py  cli.py  commands.py  constants.py  exceptions.py  image_io.py  resample.py  validation.py
src/scalerack/algorithms/: bicubic.py  bilinear.py  box.py  catmull_rom.py  channel_median.py  content_adaptive_downscale.py  eagle.py  epx.py  fsr.py  hqx.py  hqx_tables.py  lanczos.py  magic_kernel_sharp.py  mitchell.py  nearest.py  registry.py  sai.py  supereagle.py  superxbr.py  vector_median.py  xbrz.py
src/scalerack/algorithms/depixelize/: __init__.py  boundaries.py  cells.py  depixelize.py  optimize.py  render.py  similarity_graph.py  splines.py
src/scalerack/common/: footprint.py  kernels.py  neighborhoods.py  resample.py
tests/: conftest.py  test_smoke.py
