[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scalerack"
version = "0.1.0"
description = "Classical and pixel-art image up/downscaling algorithms behind one consistent interface."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Luke100000" }]
requires-python = ">=3.11"
dependencies = ["numpy>=1.26"]
keywords = ["image", "scaling", "resampling", "resize", "pixel-art", "lanczos", "scale2x"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Typing :: Typed",
]

[project.optional-dependencies]
cli = ["pillow>=10", "cyclopts>=3"]
all = ["scalerack[cli]"]

[project.scripts]
scalerack = "scalerack.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
    "pillow>=10",
    "cyclopts>=3",
    "pre-commit>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scalerack"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
warn_return_any = false
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
