[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[project]
name = "scalerack"
version = "0.1.1"
description = "Classical and pixel-art image up/downscaling algorithms behind one consistent interface."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Luke100000" }]
requires-python = ">=3.11"
dependencies = ["numpy>=1.26"]
keywords = ["image", "scaling", "resampling", "resize", "pixel-art", "lanczos", "scale2x"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Luke100000/scalerack"
Repository = "https://github.com/Luke100000/scalerack"
Issues = "https://github.com/Luke100000/scalerack/issues"
PyPI = "https://pypi.org/project/scalerack/"

[project.optional-dependencies]
cli = ["pillow>=10", "cyclopts>=3"]
content-adaptive-downscale = ["scikit-image>=0.24"]
all = ["scalerack[cli,content-adaptive-downscale]"]

[project.scripts]
scalerack = "scalerack.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
    "pillow>=10",
    "scikit-image>=0.24",
    "cyclopts>=3",
    "pre-commit>=4",
    "tqdm>=4.66",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
warn_return_any = false
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
