[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[project]
name = "scalerack"
version = "0.1.2"
description = "Python image resizing, resampling, downscaling, and pixel-art upscaling library and CLI."
readme = "README.md"
license = "MPL-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Luke100000" }]
requires-python = ">=3.11"
dependencies = ["numpy>=1.26"]
keywords = [
    "image",
    "image-processing",
    "image-resize",
    "image-resizing",
    "image-scaling",
    "resampling",
    "upscaling",
    "downscaling",
    "pixel-art",
    "pixel-art-scaler",
    "lanczos",
    "mitchell",
    "catmull-rom",
    "scale2x",
    "pillow",
    "numpy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Luke100000/scalerack"
Repository = "https://github.com/Luke100000/scalerack"
Issues = "https://github.com/Luke100000/scalerack/issues"
PyPI = "https://pypi.org/project/scalerack/"

[project.optional-dependencies]
cli = ["pillow>=10", "cyclopts>=3"]
content-adaptive-downscale = ["scikit-image>=0.24"]
all = ["scalerack[cli,content-adaptive-downscale]"]

[project.scripts]
scalerack = "scalerack.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
    "pillow>=10",
    "scikit-image>=0.24",
    "cyclopts>=3",
    "pre-commit>=4",
    "tqdm>=4.66",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
warn_return_any = false
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
